# Obelisk

./: .gitignore  Cargo.toml
net/: Cargo.toml
net/src/: ints.rs  lib.rs
src/: main.rs
src/entities/: player.rs
src/net/: codec.rs  login.rs  mod.rs  play.rs  status.rs
src/world/: chunks.rs  mod.rs  palette.rs
