[package]
name = "obelisk"
version = "0.1.0"
authors = ["Rafi Baum <rafi@ukbaums.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.1"
bytes = "0.4.12"
futures = "0.1"
rand = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.1"
uuid = { version = "0.7", features = ["v5"]}